--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
+    padding: 10px;
+}
+
+.container {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    display: flex;
+    flex-direction: column;
+}
+
+.buttons-container {
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    margin: 5px 5px 5px 5px;
+}
+
 th, td {
     border-style: solid;
     border-width: 1px;
