--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@
     justify-content: center;
 }
 
+.table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 button {
     margin: 5px 5px 5px 5px;
 }
